updated styles and fonts

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,25 @@
   background-color: red;
 }*/
 
+@font-face {
+  font-family: "Kevin";
+  src: url("Kevin Eleven.ttf");
+  format("truetype");
+}
+
+@font-face {
+  font-family: "button";
+  src: url("CFIDontWanttoGrowUp-Regular.ttf");
+  format("truetype");
+}
+
+.btn {
+  font-family: "button"; 
+}
+
+body {
+  font-family: "Kevin";
+}
 .row {
   border: 1px solid;
   height: 200px;
